--- a/commenthead/templates/base.html
+++ b/commenthead/templates/base.html
@@ -42,15 +42,15 @@
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-            <a href="{% 'tweet_list' %}" class="btn btn-primary mx-2 ">Tweet Home</a>
+            <a href="{% url 'tweet_list' %}" class="btn btn-primary mx-2 ">Tweet Home</a>
             {% if user.is_authenticted %}
-            <form method='post' action={% utl 'logout' %}>
-              {% csrf_tokrn %}
+            <form method='post' action={% url 'logout' %}>
+              {% csrf_token %}
               <button class="btn btn-danger" type="submit" >Logout</logout>
             </form>
             {% else %}
-            <a href="{%url 'register' %}" class="btn btn-primary mx-2">Register</a>
-            <a href="{%url 'login' %}" class="btn btn-success mx-2">Login</a>
+            <a href="{% url 'register' %}" class="btn btn-primary mx-2">Register</a>
+            <a href="{% url 'login' %}" class="btn btn-success mx-2">Login</a>
             {% endif %}
           
 
