--- a/commenthead/templates/registration/login.html
+++ b/commenthead/templates/registration/login.html
@@ -10,5 +10,5 @@
     <button class="btn btn-primary">Login</button>
 
  </form>
-<p>If you already have an account please click here to <a href="{% url 'login'  %}">Login Here</a></p>
+<p>If you already have an account please click here to <a href="{% url 'login'  %}">register Here</a></p>
 {% endblock %}
