--- a/commenthead/templates/registration/register.html
+++ b/commenthead/templates/registration/register.html
@@ -10,5 +10,5 @@
     <button class="btn btn-primary">Register</button>
 
  </form>
-<p>Don't have an account? <a href="{% url 'register'  %}">Register Here</a></p>
+<p>Don't have an account? <a href="{% url 'register'  %}">Login Here</a></p>
 {% endblock %}
