--- a/commenthead/tweet/templates/tweet_list.html
+++ b/commenthead/tweet/templates/tweet_list.html
@@ -8,7 +8,12 @@
 <div class="container row gap-3">
     {% for tweet in tweets %}
     <div class="card" style="width: 18rem;">
-        <img src="{{ tweet.photo.url }}" class="card-img-top" alt="image">
+      {% if tweet.photo %}
+      <img src="{{ tweet.photo.url }}" alt="Tweet photo" />
+      {% else %}
+      <p>No photo available for this tweet.</p>
+      {% endif %}
+  
         <div class="card-body">
           <h5 class="card-title">{{tweet.user.username}}</h5>
           <p class="card-text">{{tweet.text}}</p>
